--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -60,7 +60,7 @@
       <phrase id="menutext" value="Diseases" />
     </menu>
     <menu id="6">
-      <phrase id="menutext" value="My Charges" />
+      <phrase id="menutext" value="Charges" />
     </menu>
     <menu id="173">
       <phrase id="menutext" value="Investigations" />
@@ -348,27 +348,27 @@
       </field>
     </table>
     <table id="doctor_charges">
-      <phrase id="tblcaption" value="doctor charges" />
+      <phrase id="tblcaption" value="Doctor Charges" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="doctor_id">
-        <phrase id="fldcaption" value="doctor id" />
+        <phrase id="fldcaption" value="Doctor" />
       </field>
       <field id="item_title">
-        <phrase id="fldcaption" value="item title" />
+        <phrase id="fldcaption" value="Cost Item" />
       </field>
       <field id="cost">
-        <phrase id="fldcaption" value="cost" />
+        <phrase id="fldcaption" value="Cost" />
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="created by user id" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="doctor_notes">
@@ -1550,7 +1550,7 @@
         <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
-    <table id="vitalsreport2">
+    <table id="vitalsreport">
       <phrase id="tblcaption" value="vitalsreport 2" />
       <field id="id">
         <phrase id="fldcaption" value="id" />
